--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -50,5 +50,31 @@ svg{
 .container-fluid{
     max-width: 1920px;
 	width: 100%;
-	margin: 0 auto;
+    margin: 0 auto;
+    position: relative;
+}
+.title{
+    font-size: 40px;
+    line-height: 50px;
+    color: $black;
+}
+.button{
+    background-color: #2D3D51;
+    color: #fefefe;
+    padding: 20px 90px 20px 30px;
+    position: relative;
+    &::after{
+        content: '';
+        background-image: url(../images/icons/Vector.svg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        width: 30PX;
+        height: 15px;
+        position: absolute;
+        right: 30px;
+        top: 50%;
+        transform: translateY(-50%);
+        color: #fefefe;
+    }
 }
