--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -7,16 +7,33 @@ html{
     box-sizing: inherit;
 }
 body{
-	// font-family: 'Свой';
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-weight: 400;
 	font-size: 20px;
 	color: $black;
-	position: relative;
+    position: relative;
+    overflow-x: hidden;
+    &.stopped{
+        overflow-y: hidden;
+    }
+}
+.block{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(45, 61, 81, .5);
+    z-index: 101;
+    &.active{
+        display: block;
+    }
 }
 a{
 	display: inline-block;
 	text-decoration: none;
-	// color: #000;
+	color: $black;
 }
 p{
 	margin: 0;
@@ -54,12 +71,14 @@ svg{
     position: relative;
 }
 .title{
+    font-weight: 700;
     font-size: 40px;
     line-height: 50px;
     color: $black;
 }
 .button{
     background-color: #2D3D51;
+    font-weight: 600;
     color: #fefefe;
     padding: 20px 90px 20px 30px;
     position: relative;
@@ -76,5 +95,57 @@ svg{
         top: 50%;
         transform: translateY(-50%);
         color: #fefefe;
+    }
+}
+.fieldset{
+    width: 100%;
+    border: 2px solid #F0F4F7;
+    padding: 8px 20px 15px 10px;
+    input{
+        border: none;
+        padding-left: 10px;
+        &::placeholder{
+            color: #8DA1B6;
+        }
+    }
+    legend{
+        padding: 0px 10px;
+        font-weight: 600;
+    }
+}
+
+.modal{
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    &.active{
+        display: block;
+    }
+    &__inner{
+        overflow-y: auto; 
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        padding: 0 36px;
+        display: flex;
+        align-items: center;
+        z-index: 105;
+    }
+    &__content{
+        margin: auto;
+        max-width: max-content;
+        width: 100%;
+        background: #FFF;
+    }
+    .cart-title{
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 25px;
+        color: $black;
     }
 }
