--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -7,9 +7,10 @@ html{
     box-sizing: inherit;
 }
 body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-weight: 400;
-	font-size: 20px;
+    font-size: 20px;
+    line-height: 200%;
 	color: $black;
     position: relative;
     overflow-x: hidden;
@@ -33,7 +34,7 @@ body{
 a{
 	display: inline-block;
 	text-decoration: none;
-	color: $black;
+    color: $black;
 }
 p{
 	margin: 0;
@@ -74,7 +75,6 @@ svg{
     font-weight: 700;
     font-size: 40px;
     line-height: 50px;
-    color: $black;
 }
 .button{
     background-color: #2D3D51;
@@ -100,7 +100,8 @@ svg{
 .fieldset{
     width: 100%;
     border: 2px solid #F0F4F7;
-    padding: 8px 20px 15px 10px;
+    padding: 0px 20px 7px 10px;
+    margin: 0;
     input{
         border: none;
         padding-left: 10px;
@@ -144,7 +145,6 @@ svg{
     }
     .cart-title{
         font-weight: 700;
-        font-size: 20px;
         line-height: 25px;
         color: $black;
     }
